<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <Button
            android:id="@+id/sky_btn"
            style="@style/CommonBtnStyle"
            android:text="@string/sky"/>

        <Button
            android:id="@+id/bliss_btn"
            style="@style/CommonBtnStyle"
            android:text="@string/bliss"/>

        <Button
            android:id="@+id/escape_btn"
            style="@style/CommonBtnStyle"
            android:text="@string/escape"/>

    </LinearLayout>

</RelativeLayout>
