<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment"
    android:background="@color/colorDetailBg"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/shipName"
            style="?attr/styleLabel"/>

        <TextView
            android:id="@+id/ship_name_txt"
            style="?attr/styleValue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/passengerCapacity"
            style="?attr/styleLabel"/>

        <TextView
            android:id="@+id/pass_cap_txt"
            style="?attr/styleValue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/crew"
            style="?attr/styleLabel"/>

        <TextView
            android:id="@+id/crew_txt"
            style="?attr/styleValue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/inauguralDate"
            style="?attr/styleLabel"/>

        <TextView
            android:id="@+id/inaug_date_txt"
            style="?attr/styleValue"/>

    </LinearLayout>


</LinearLayout>
